@@ -1,3 +1,4 @@
+* Allow to specify more than one interface
 * Use unoconv for report format conversion
 * Allow to use any Opendocument as report template
 * Drop NetRPC and activate JSON-RPC by default
